syntax = "proto3";

import "./bytesTransaction.proto";

message bytesBlock {
    bytes bytes = 1;
    repeated bytesTransaction transactions = 2;
    uint32 height = 3;
}